@@ -91,7 +91,7 @@
                    i18n:domain="opengever.base"
                    i18n:translate="search_results_advanced_link"
                    tal:define="nav_root_url context/@@plone_portal_state/navigation_root_url;
-                               st python:request.get('SearchableText', '');"
+                               st view/quoted_searchable_text;"
                    tal:attributes="href string:${nav_root_url}/advanced_search?SearchableText=${st}">Advanced Search</a>
               </span>
               to refine your search.
